Bugs - Profile picture stretch / Navbar links reset on refresh

--- a/src/views/homePage/components/ProfileReview/ProfileReviewStyles.scss
+++ b/src/views/homePage/components/ProfileReview/ProfileReviewStyles.scss
@@ -20,6 +20,7 @@
     width: 9.6rem;
     height: 9.6rem;
     border-radius: 50%;
+    object-fit: cover;
     border: 2px solid $primary-color;
   }
 
