--- a/src/views/previewPage/components/PreviewPageStyles.scss
+++ b/src/views/previewPage/components/PreviewPageStyles.scss
@@ -8,10 +8,11 @@
   transform: translateX(-50%);
   background-color: $white;
   box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.1);
-  padding: 4.8rem 0;
+  padding: 4.8rem 1rem;
   border-radius: 2.4rem;
   min-height: 57rem;
-  width: 34rem;
+  max-width: 38rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,6 +29,7 @@
     width: 9.6rem;
     height: 9.6rem;
     border-radius: 50%;
+    object-fit: cover;
     border: 2px solid $primary-color;
   }
 
@@ -50,7 +52,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      width: 24rem;
+      width: 25rem;
       height: 4.75rem;
       border-radius: 0.8rem;
       border: 1px solid $light-grey;
